# compiler

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  bison.y  front_flex.l  hello.cpp  lex.yy.c  test.cpp  test.s  testforgit.md
.cache/clangd/index/: AstNode.cpp.C0662969712DECFC.idx  AstNode.h.F767C3E2CD3532A7.idx  entry.cpp.825975B1174674FF.idx
ast/: AstNode.h
md/: struct.md
src/: entry.cpp
src/ast/: AstNode.cpp  AstNode.h  utils.h
src/astpass/: astpass.cpp  astpass.h
src/back/: back.cpp  back.h  genBack.cpp  genback.h  generateBack.cpp  generateBack.h  regtable.cpp  regtable.h
src/controller/: controller.cpp  controller.h
src/enum/: enums.h
src/front/: bison.y  parser.cpp
src/front/ast/: AstNode.cpp  AstNode.h
src/front/parser/: bison.y  flex2.l  front_flex.l  lex.yy.c  notes_of_flex.txt  parser.cpp  parser.hpp  tokens.cpp
src/mid/ir/: genIR.cpp  ir.cpp  ir.h
src/mid/optimize/: deadCode.cpp  deadCode.h
src/mid/recordTable/: RecordTable.cpp  RecordTable.h
src/optimize/: deadCodeElimination.cpp  deadCodeElimination.h
testTool/: autotest.sh  test.sh
testTools/: Cgen.py  autotest.sh
